# CI_Template

./: CMakeLists.txt
.cmake/: config.yml.in
.github/workflow/: docker-multi-platform.yml
.github/workflows/: cmake-multi-platform.yml-bak  cmake-windows-platform.yml  docker-linux-platform.yml  docker-linux-platform.yml.bak  docker-multi-platform.yml
app/: CMakeLists.txt
app/include/: temp.h
app/src/: main.cpp  temp.cpp
ci/: build_in_docker.sh  build_in_windows.ps1
ci/docker/: dockerfile.debian  dockerfile.rhel  dockerfile.rhel.aliyun
lib/: CMakeLists.txt
lib/temp_lib/: CMakeLists.txt
lib/temp_lib/include/: lib_temp.h
lib/temp_lib/src/: lib_temp.cpp
